--- a/W2ExeStudent-war/WebContent/add.xhtml
+++ b/W2ExeStudent-war/WebContent/add.xhtml
@@ -113,14 +113,14 @@
 					-->
 					
                     <!-- Start of the input field code -->
-                     <tr>
+                     <tr class="#{!postcode.valid ? 'has-error' : 'none'}">
                         <td>
                             <h:outputLabel value="Size:" for="size"/>
                         </td>
                         <td>
                             <h:inputText id="size" value="#{property.size}" title="size" required="true" requiredMessage="Please enter the size!" validatorMessage="Size must be larger than 1" converterMessage="Please enter a positive number" pt:placeholder="530000.59">
-                        		<f:convertNumber integerOnly="true"/>
-                        		<f:validateLongRange minimum="2"/> 
+                        		<f:convertNumber patten="#0.00"/>
+                        		<f:validateLongRange minimum="1"/> 
                            	</h:inputText>
                            	<br/>
                            	<h:message for="size" class="#{!size.valid ? 'label label-warning' : 'none'}" />
